--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -1,4 +1,6 @@
+@import './base/breakpoints.scss';
 @import './base/colors.scss';
+@import './base/classes.scss';
 @import './base/base.scss';
 @import './components/ChatApp.scss';
 @import './components/Sidebar.scss';
