--- a/client/src/styles/base/_base.scss
+++ b/client/src/styles/base/_base.scss
@@ -26,9 +26,11 @@ body {
 button {
   background: transparent;
   border: none;
+  font-family: 'Muli', sans-serif;
   cursor: pointer;
 }
 
 .ReactModalPortal .ReactModal__Overlay--after-open {
   background-color: #eeeeeea2 !important;
+  z-index: 2000;
 }
