--- a/client/src/styles/base/_colors.scss
+++ b/client/src/styles/base/_colors.scss
@@ -1,8 +1,9 @@
 $violet: #6c65ac;
 $violet-light: #877ed8;
-$violet-shadow: #4b4677;
 $violet-gradient: linear-gradient(to bottom right, $violet 0%, $violet 40%, $violet-light 100%);
 $grey: #CFD8DC;
 $grey-dark: #a8a8a8;
 $grey-text: #949494;
 $blue-light: #a5cfd5;
+$shadow: #00000094;
+$light-shadow: #00000052;
