--- a/client/src/styles/components/_Sidebar.scss
+++ b/client/src/styles/components/_Sidebar.scss
@@ -1,33 +1,57 @@
 .sidebar {
-  width: 20%;
+  width: 300px;
   background: $violet-gradient;
+  -webkit-transition: all .5s ease;
+	-moz-transition: all .5s ease;
+	transition: all .5s ease;
 
   .profile {
     display: flex;
+    justify-content: space-between;
 
-    img {
-      max-height: 80px;
-      margin: 10px;
-      border-radius: 50%;
-      box-shadow: 0 5px 20px $violet-shadow;
-    }
+    .left {
+      display: flex;
 
-    p {
-      margin: 15px;
-      color: #fff;
-      font-size: 20px;
-      font-weight: bold;
-    }
+      img {
+        max-height: 80px;
+        margin: 10px;
+        border-radius: 50%;
+        box-shadow: 0 5px 20px $light-shadow;
+      }
 
-    button {
-      margin-left: 15px;
-      padding: 5px 10px 5px 15px;
-      color: #fff;
-      border: 1px solid #fff;
-      border-radius: 3px;
+      p {
+        margin: 15px;
+        color: #fff;
+        font-size: 20px;
+        font-weight: bold;
+      }
 
       .edit {
-        margin: 0 3px 0 10px;
+        margin-left: 15px;
+        padding: 5px 10px 5px 15px;
+        color: #fff;
+        border: 1px solid #fff;
+        border-radius: 3px;
+
+        .icon {
+          margin: 0 3px 0 10px;
+        }
+      }
+    }
+
+    .close {
+      display: none;
+
+      @media (max-width: $medium) {
+        display: inline;
+      }
+
+      button {
+        margin: 10px 5px;
+
+        .icon {
+          color: #fff;
+        }
       }
     }
   }
@@ -38,7 +62,7 @@
     height: 40px;
     margin-bottom: 5px;
     color: #fff;
-    box-shadow: 0 5px 20px $violet-shadow;
+    box-shadow: 0 5px 20px $light-shadow;
     border: 1px solid transparent;
 
     p {
@@ -47,7 +71,7 @@
     }
 
     button {
-      .add {
+      .icon {
         margin: auto 10px;
         color: #fff;
       }
