--- a/client/src/styles/base/_classes.scss
+++ b/client/src/styles/base/_classes.scss
@@ -14,9 +14,9 @@
 }
 
 .button-text {
-  padding: 1px 20px 2px 20px;
+  padding: 0 20px 1px 20px;
   color: #fff;
-  font-size: 14px;
+  font: $font-s;
   border: 1px solid #fff;
   border-radius: 3px;
 }
