--- a/client/src/styles/components/_Modal.scss
+++ b/client/src/styles/components/_Modal.scss
@@ -16,18 +16,20 @@
 
     h3 {
       margin: 15px auto 20px auto;
+      font: $font-l-bold;
     }
 
     .error {
       height: 20px;
       margin: 20px auto;
       color: $yellow;
+      font: $font-s;
       text-align: center;
     }
 
     p {
       margin: 5px auto;
-      font-size: 14px;
+      font: $font-s;
       text-align: left;
     }
 
@@ -36,9 +38,10 @@
       margin: 0 auto 20px auto;
       background: transparent;
       color: #fff;
-      font-size: 20px;
-      font-family: 'Muli';
-      font-weight: bold;
+      // font-size: 20px;
+      // font-family: 'Muli';
+      // font-weight: bold;
+      font: $font-l-bold;
       border: none;
       border-bottom: 1px solid #fff;
     }
