--- a/client/src/styles/base/_variables.scss
+++ b/client/src/styles/base/_variables.scss
@@ -1,15 +1,16 @@
 // COLORS
 
-$violet: #6c65ac;
-$violet-light: #877ed8;
-$violet-gradient: linear-gradient(to bottom right, $violet 0%, $violet 40%, $violet-light 100%);
+$violet: #746db4;
+$violet-transparent: #6c65ace0;
+$violet-light: #9087e0;
 $grey: #CFD8DC;
 $grey-dark: #a8a8a8;
 $grey-text: #949494;
-$blue-light: #a5cfd5;
+$blue-transparent: #a5cfd58a;
+$white-transparent: #ffffffb7;
 $yellow: #ffd752;
 $shadow: #00000094;
-$light-shadow: #00000052;
+$shadow-light: #00000052;
 
 // FONT SIZES
 
