--- a/client/src/styles/components/_Message.scss
+++ b/client/src/styles/components/_Message.scss
@@ -21,7 +21,7 @@
     height: auto;
     margin: 5px;
     padding: 5px 10px;
-    background: #fff;
+    background: $white-transparent;
     border-radius: 6px;
     word-break: break-all;
 
