--- a/client/src/styles/components/_MyMessage.scss
+++ b/client/src/styles/components/_MyMessage.scss
@@ -15,7 +15,7 @@
     margin: 5px;
     padding: 5px 10px;
     text-align: right;
-    background: $blue-light;
+    background: $blue-transparent;
     border-radius: 6px;
     word-break: break-all;
 
