Bug fixes, restyling

--- a/client/src/styles/components/_MyMessage.scss
+++ b/client/src/styles/components/_MyMessage.scss
@@ -17,7 +17,7 @@
     text-align: right;
     background: $blue-transparent;
     border-radius: 6px;
-    word-break: break-all;
+    overflow: hidden;
 
     .sender {
       margin: 0 0 10px 0;
