--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -8,4 +8,5 @@
 @import './components/Sidebar.scss';
 @import './components/Message.scss';
 @import './components/MyMessage.scss';
-@import './components/PasswordModal.scss'
+@import './components/PasswordModal.scss';
+@import './components/AvatarModal.scss';
