--- a/client/src/styles/components/_ChatApp.scss
+++ b/client/src/styles/components/_ChatApp.scss
@@ -30,7 +30,7 @@
         }
 
         button {
-          margin-top: 12px;
+          margin: 14px 0 0 10px;
 
           .icon {
             color: #fff;
