--- a/client/src/styles/components/_Message.scss
+++ b/client/src/styles/components/_Message.scss
@@ -23,7 +23,7 @@
     padding: 5px 10px;
     background: $white-transparent;
     border-radius: 6px;
-    word-break: break-all;
+    overflow: hidden;
 
     .sender {
       margin: 0 0 10px 0;
