--- a/client/src/styles/partials/_variables.scss
+++ b/client/src/styles/partials/_variables.scss
@@ -1,18 +1,9 @@
 // COLORS
 
-$violet: #746db4;
-$violet-transparent: #6c65ace0;
-$violet-light: #9087e0;
-$grey: #CFD8DC;
-$grey-dark: #a8a8a8;
-$grey-text: #949494;
-$blue-transparent: #a5cfd58a;
-$white-transparent: #ffffffb7;
-$yellow: #ffd752;
 $shadow: #00000094;
 $shadow-light: #00000052;
 
-// FONT SIZES
+// FONTS 
 
 $font-xs-italic: italic 12px 'Muli', sans-serif;
 $font-xs-bold: bold 12px 'Muli', sans-serif;
