--- a/client/src/styles/components/_SidebarLeft.scss
+++ b/client/src/styles/components/_SidebarLeft.scss
@@ -1,10 +1,9 @@
-.sidebar {
+.sidebar-left {
   min-width: 300px;
   max-width: 300px;
-  background: $violet-transparent;
   -webkit-transition: all .5s ease;
 	-moz-transition: all .5s ease;
-	transition: all .5s ease;
+  transition: all .5s ease;
 
   .profile {
     display: flex;
@@ -21,7 +20,6 @@
 
       p {
         margin: 15px;
-        color: #fff;
         font: $font-l-bold;
       }
 
@@ -39,10 +37,6 @@
 
       button {
         margin: 10px 5px;
-
-        .icon {
-          color: #fff;
-        }
       }
     }
   }
