Added set avatar feature

--- a/client/src/styles/components/_Message.scss
+++ b/client/src/styles/components/_Message.scss
@@ -8,6 +8,9 @@
   }
 
   img {
+    min-width: 50px;
+    max-width: 50px;
+    min-height: 50px;
     max-height: 50px;
     margin: 5px;
     border-radius: 50%;
