--- a/client/src/styles/partials/_mixins.scss
+++ b/client/src/styles/partials/_mixins.scss
@@ -74,6 +74,9 @@
     margin: auto 10px;
 
     img {
+      min-width: 40px;
+      max-width: 40px;
+      min-height: 40px;
       max-height: 40px;
       margin: 5px;
       border-radius: 50%;
