--- a/client/src/styles/components/_SidebarLeft.scss
+++ b/client/src/styles/components/_SidebarLeft.scss
@@ -15,6 +15,9 @@
       display: flex;
 
       img {
+        min-width: 70px;
+        max-width: 70px;
+        min-height: 70px;
         max-height: 70px;
         margin: 10px;
         border-radius: 50%;
