--- a/client/src/styles/components/_ChatApp.scss
+++ b/client/src/styles/components/_ChatApp.scss
@@ -9,7 +9,7 @@
     width: 100%;
     height: 100vh;
     max-height: 100vh;
-    background-image: url('/img/triangles.png');
+    background-image: url('/img/sun.png');
     -webkit-transition: all .5s ease;
     -moz-transition: all .5s ease;
     transition: all .5s ease;
