--- a/client/src/styles/components/_LoginPage.scss
+++ b/client/src/styles/components/_LoginPage.scss
@@ -1,7 +1,7 @@
 .login-page {
   min-height: 100vh;
   margin-top: -1px;
-  background-image: url('/img/triangles.png');
+  background-image: url('/img/sun.png');
   border-top: 1px solid transparent;
 
   .login-modal {
